# obs-studio

frontend/: CMakeLists.txt  OBSApp.cpp
frontend/dialogs/: OBSAbout.cpp
frontend/forms/: OBSAbout.ui  OBSBasic.ui  OBSPermissions.ui  obs.qrc
frontend/settings/: OBSBasicSettings.cpp  OBSBasicSettings_Stream.cpp
frontend/widgets/: OBSBasic.cpp  OBSBasic.hpp  OBSBasicStats.cpp  OBSBasic_SysTray.cpp  OBSProjector.cpp
frontend/wizards/: AutoConfigStreamPage.cpp
plugins/: CMakeLists.txt
plugins/obs-license/: CMakeLists.txt  license.cpp
plugins/obs-license/data/locale/: en-US.ini
plugins/obs-license/data/obs-plugins/obs-license/locale/: en-US.ini
